# missing-foreign

./: .gitignore  missing-foreign.cabal
Foreign/Marshal/: MissingAlloc.hs  MissingUtils.hs
Foreign/Marshal/Alloc/: Calloc.hs
