Name:                missing-foreign
Version:             0.1.0
Synopsis:            Convenience functions for FFI work
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit
Maintainer:          dagitj@gmail.com
Category:            FFI
Build-type:          Simple
Cabal-version:       >=1.2

Library
  -- Modules exported by the library.
  Exposed-modules:     Foreign.Marshal.Alloc.Calloc
                       Foreign.Marshal.MissingUtils
  
  -- Packages needed in order to build this package.
  Build-depends:       base >= 3 && < 5
  GHC-options: -Wall
